[package]
name = "applebyte"
description = "An emulator for 8-bit Apple computers"
version = "0.1.0"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
homepage = "https://github.com/edmccard/applebyte"
repository = "https://github.com/edmccard/applebyte"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
machine_int = "0.1.4"
robo6502 = "0.3.2"
